Fix PMD violations: final params/vars, single return, naming, locale
- Add final to all method parameters and local variables that are not reassigned
- Rename CJSCPPUID/CPPCLIENTCORRELATIONID controller params to camelCase
- Refactor multi-return methods to single exit point
- Fix UseLocaleWithCaseConversions: pass Locale.ROOT to toUpperCase calls
- Fix ConfusingTernary in CustodialPreprocessor: invert negated condition
- Fix LinguisticNaming: rename hasInfoOffenceIds/hasBothOffenceIds local vars
- Fix AvoidLiteralsInIfCondition: extract constants in MessageTemplateResolver
- Fix NullAssignment in normalizeSeverity: use Optional stream
- Make @Bean method public to fix CommentDefaultAccessModifier
- Add /* default */ to package-private inner class constructor
- Suppress AvoidInstantiatingObjectsInLoops for per-iteration ArrayList usage